--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,12 @@
     		<artifactId>javafaker</artifactId>
     		<version>1.0.2</version>
 		</dependency>
+<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-validation -->
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-validation</artifactId>
+    <version>3.1.0</version><!--$NO-MVN-MAN-VER$-->
+</dependency>
 
 	</dependencies>
 
